made skill icons smaller and denser on mobile. fixed nav-link spacing just before breakpoint

--- a/site/css/sass/partials/header/_navbar.scss
+++ b/site/css/sass/partials/header/_navbar.scss
@@ -30,9 +30,9 @@
 
     .navbar-nav {
         list-style-type: none;
-        gap: 5px;
+        gap: 50px;
 
-        @media (min-width: 991px) {
+        @media (min-width: 1024px) {
             gap: 90px;
         }
 
