--- a/site/css/sass/partials/sections/_contact.scss
+++ b/site/css/sass/partials/sections/_contact.scss
@@ -52,7 +52,7 @@
             display: flex;
             flex-direction: column;
             gap: 30px;
-            margin-top: 50px;
+            margin-top: 100px;
     
             @media(max-width: 768px) {
                 flex-direction: row;
